--- a/.github/workflows/app-build-release.yml
+++ b/.github/workflows/app-build-release.yml
@@ -1,89 +1,71 @@
-name: Build and Release App
+name: Build e Release App
 
 on:
   push:
     tags:
-      - "app-*@*" # Formato para tags: app-nome@versão (ex: app-slack@1.0.0)
-    branches:
-      - main # Para atualizações no pipeline
+      - "v*" # Dispara em tags como v1.0.0
   workflow_dispatch:
     inputs:
-      app_name:
-        description: "Aplicativo de Teste"
-        required: true
-        type: string
-      version:
-        description: "0.0.1"
-        required: true
-        type: string
-      prerelease:
-        description: "É uma pré-release?"
+      create_tag:
+        description: "Criar tag com versão do manifest?"
         required: false
-        type: boolean
         default: false
+        type: boolean
 
 jobs:
-  extract-app-info:
-    runs-on: ubuntu-latest
-    outputs:
-      app_name: ${{ steps.extract-info.outputs.app_name }}
-      version: ${{ steps.extract-info.outputs.version }}
-      prerelease: ${{ steps.extract-info.outputs.prerelease || github.event.inputs.prerelease }}
-    steps:
-      - id: extract-info
-        run: |
-          # Se disparado por tag, extrair informações da tag
-          if [[ "${{ github.ref_type }}" == "tag" ]]; then
-            TAG="${{ github.ref_name }}"
-            APP_NAME=$(echo $TAG | cut -d '@' -f 1 | sed 's/^app-//')
-            VERSION=$(echo $TAG | cut -d '@' -f 2)
-            echo "app_name=$APP_NAME" >> $GITHUB_OUTPUT
-            echo "version=$VERSION" >> $GITHUB_OUTPUT
-            echo "prerelease=false" >> $GITHUB_OUTPUT
-          else
-            # Caso seja workflow_dispatch
-            echo "app_name=${{ github.event.inputs.app_name }}" >> $GITHUB_OUTPUT
-            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
-          fi
-
-  build-and-release:
-    needs: extract-app-info
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Run build script
+      - name: Extrair dados do manifest
+        id: manifest
         run: |
-          if [ -f "build.sh" ]; then
-            chmod +x build.sh
-            ./build.sh
+          # Extrai nome e versão do manifest.json usando jq
+          APP_NAME=$(jq -r '.name' manifest.json)
+          VERSION=$(jq -r '.version' manifest.json)
+
+          echo "app_name=$APP_NAME" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Dados extraídos do manifest: Nome=$APP_NAME, Versão=$VERSION"
+
+      - name: Criar tag automática (se necessário)
+        if: github.event.inputs.create_tag == 'true'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git tag -a "v${{ steps.manifest.outputs.version }}" -m "Release v${{ steps.manifest.outputs.version }}"
+          git push origin "v${{ steps.manifest.outputs.version }}"
+
+      - name: Build
+        run: |
+          chmod +x build.sh
+          ./build.sh
+
+      - name: Criar ZIP
+        run: |
+          # Usa dados do manifest ou da tag
+          if [[ "${{ github.ref_type }}" == "tag" ]]; then
+            # Se foi disparado por uma tag, extrair a versão da tag
+            TAG="${{ github.ref_name }}"
+            VERSION=${TAG#v}
           else
-            echo "Nenhum método de build encontrado!"
-            exit 1
+            # Usa a versão do manifest
+            VERSION="${{ steps.manifest.outputs.version }}"
           fi
 
-      - name: Verificar se dist existe
-        run: |
-          if [ ! -d "${{ steps.check-app.outputs.app_dir }}/dist" ]; then
-            echo "Diretório dist não foi criado após o build!"
-            exit 1
-          fi
+          APP_NAME="${{ steps.manifest.outputs.app_name }}"
 
-      - name: Criar arquivo zip
-        run: |
-          cd ${{ steps.check-app.outputs.app_dir }}
-          mkdir -p ../release
-          zip -r ../release/app-${{ needs.extract-app-info.outputs.app_name }}-${{ needs.extract-app-info.outputs.version }}.zip dist manifest.json README.md
+          echo "Criando ZIP para $APP_NAME versão $VERSION"
+          zip -r app-$APP_NAME-$VERSION.zip dist manifest.json README.md
 
-      - name: Criar release
+      - name: Criar Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
-          name: "app-${{ needs.extract-app-info.outputs.app_name }} v${{ needs.extract-app-info.outputs.version }}"
-          tag_name: "app-${{ needs.extract-app-info.outputs.app_name }}@${{ needs.extract-app-info.outputs.version }}"
-          generate_release_notes: true
-          prerelease: ${{ needs.extract-app-info.outputs.prerelease == 'true' }}
-          files: |
-            release/app-${{ needs.extract-app-info.outputs.app_name }}-${{ needs.extract-app-info.outputs.version }}.zip
+          name: "${{ steps.manifest.outputs.app_name }} v${{ steps.manifest.outputs.version }}"
+          body: "Release automática gerada a partir do manifest.json"
+          files: app-*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
