--- a/.github/workflows/app-build-release.yml
+++ b/.github/workflows/app-build-release.yml
@@ -67,5 +67,7 @@ jobs:
           name: "${{ steps.manifest.outputs.app_name }} v${{ steps.manifest.outputs.version }}"
           body: "Release automática gerada a partir do manifest.json"
           files: app-*.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # Diminuir chance de falha por corrida
+          draft: true
+          fail_on_unmatched_files: false
