--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "calculadora",
+    "name": "test",
     "version": "1.0.0",
     "description": "Aplicação simples para soma de n argumentos",
     "functions": {
